# trie-rust-benchmark

./: Cargo.toml  README.md
benches/: my_benchmark.rs
data/: word.txt
src/: main.rs
