[package]
name = "trie-rust-test"
version = "0.1.0"
authors = ["maron8676 <maron8676@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radix_trie = "0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
